--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
 		"sourceMap": true,
 		"baseUrl": ".",
 		"typeRoots": ["node_modules/@types", "src"],
+		"types": ["node"],
 		"paths": {
 			"*": ["src/@types/*"],
 			"~/*": ["./*"]
