--- a/.parcelrc
+++ b/.parcelrc
@@ -1,8 +1,9 @@
 {
-    "extends": "@parcel/config-default",
-    "validators": {
-        "*.{ts,tsx}": [
-            "@parcel/validator-eslint", "@parcel/validator-typescript",
-        ]
-    },
+	"extends": "@parcel/config-default",
+	"validators": {
+		"*.{ts,tsx}": [
+			"@parcel/validator-eslint",
+			"@parcel/validator-typescript"
+		]
+	}
 }
