--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
 	"main": "dist/main.js",
 	"license": "MIT",
 	"devDependencies": {
-		"@parcel/transformer-stylus": "^2.0.0-nightly.845",
 		"@parcel/transformer-typescript-tsc": "^2.0.0-nightly.845",
-		"@parcel/transformer-vue": "^2.0.0-nightly.2467",
 		"@parcel/validator-eslint": "^2.0.0-nightly.845",
 		"@parcel/validator-typescript": "^2.0.0-nightly.884",
 		"@types/jest": "^27.0.2",
@@ -27,8 +25,7 @@
 		"prettier": "^2.3.2",
 		"ts-jest": "^27.0.5",
 		"ts-node": "^10.3.0",
-		"typescript": "^4.4.2",
-		"vue": "^3.2.9"
+		"typescript": "^4.4.2"
 	},
 	"browserslist": [
 		"since 2020-12"
