--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
 	"name": "monkey-ts",
 	"author": "Baku Hashimoto <mail@baku89.com> (https://baku89.com)",
 	"scripts": {
-		"build": "parcel build src/main.ts --dist-dir dist",
-		"repl": "npm run build; node .",
-		"watch": "parcel watch src/main.ts --dist-dir dist",
-		"test": "jest --slient=false"
+		"build": "tsc src/index.ts --declaration --sourceMap false --downlevelIteration true --outdir dist",
+		"build:repl": "tsc src/repl/index.ts --downlevelIteration true --outdir repl",
+		"lint": "eslint src",
+		"repl": "npm run build:repl; node repl",
+		"test": "jest --slient=false",
+		"prepare": "npm run build"
 	},
-	"main": "dist/main.js",
+	"main": "dist/index.js",
 	"license": "MIT",
+	"version": "0.1.0",
 	"devDependencies": {
-		"@parcel/transformer-typescript-tsc": "^2.0.0-nightly.845",
-		"@parcel/validator-eslint": "^2.0.0-nightly.845",
-		"@parcel/validator-typescript": "^2.0.0-nightly.884",
 		"@types/jest": "^27.0.2",
 		"@typescript-eslint/eslint-plugin": "^4.28.2",
 		"@typescript-eslint/parser": "^4.28.2",
@@ -21,18 +21,9 @@
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"eslint-plugin-unused-imports": "^1.1.2",
 		"jest": "^27.2.4",
-		"parcel": "^2.0.0-nightly.843",
 		"prettier": "^2.3.2",
 		"ts-jest": "^27.0.5",
 		"ts-node": "^10.3.0",
 		"typescript": "^4.4.2"
-	},
-	"browserslist": [
-		"since 2020-12"
-	],
-	"targets": {
-		"main": {
-			"context": "node"
-		}
 	}
 }
