--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"lint": "eslint src",
 		"repl": "npm run build:repl; node repl",
 		"test": "jest --slient=false",
-		"prepare": "npm run build"
+		"prepare": "npm run build && npm run build:repl"
 	},
 	"main": "dist/index.js",
 	"bin": {
