--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
 		"lint": "eslint src",
 		"repl": "npm run build:repl; node repl",
 		"test": "jest --slient=false",
-		"prepare": "npm run build"
+		"prepare": "npm run build && npm run build:repl"
 	},
 	"main": "./lib/index.js",
-	"types": "./lib/index.d.ts",
-	"bin": {
-		"monkey": "./bin/monkey"
-	},
+	"typings": "./lib/index.d.ts",
+	"bin": "./bin/monkey",
 	"license": "MIT",
 	"version": "0.1.3",
 	"devDependencies": {
