--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
 		"baseUrl": ".",
 		"lib": ["esnext"]
 	},
-	"include": ["src/**/*.ts", "demo/**/*.ts"],
+	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules"]
 }
